[package]
name = "apex_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"          # The Web Server
serde = { version = "1.0", features = ["derive"] } # JSON handling
serde_json = "1.0"       # JSON parsing
rayon = "1.10"           # Parallel processing
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
actix-files = "0.6"
hnsw_rs = "0.3"